CICO-40772 fix jumper to checkout search and pickup key search by last name. added iPad screen jumper (dev environments only)

--- a/zest_station/css/less/forms.less
+++ b/zest_station/css/less/forms.less
@@ -1,6 +1,6 @@
 input,
 select,
-.button {
+.button:not(.ng-hide) {
     font-family: @fontFamily;
     font-size: 1.389em;
     vertical-align: middle;
@@ -11,6 +11,11 @@ select,
     .transition();
     display: initial !important;
 } 
+li{
+    .button:not(.ng-hide) {
+        display: block !important;
+    }
+}
 
 input {
     color: @textColor;
@@ -92,7 +97,6 @@ select {
 }
 
 .form {
-    display: table !important;
     width: 100% !important;
 
     #flexbox > .flex();
@@ -102,6 +106,9 @@ select {
         width: 50%;
         margin: 0 auto; 
     }
+}
+.form:not(.ng-hide){
+    display: table !important;
 }
 
 .entry {
@@ -164,8 +171,8 @@ select {
 
         > label,
         > input,
-        > .select {
-            display: inline-block;
+        > .select:not(.ng-hide) {
+            display: inline-block !important;
         }
 
         > label {
@@ -340,15 +347,18 @@ select {
 .editor-mode-cls {
     min-width:200px;
 }
-.action > .button {
+.action > .button:not(.ng-hide) {
     display: table-cell !important;
 }
-#content > button {
+#content > button:not(.ng-hide) {
     display:table-cell !important;
 }
 
-.entry > .select {
+.entry > .select:not(.ng-hide) {
     &.button {
         display: inline-block !important;
     }
+}
+.centered > #content > .button:not(.ng-hide) {
+    display:block !important;
 }
